# discord_todo

./: .dockerignore  .gitignore  Dockerfile  README.md  deploy.md  docker-compose.yml  env.example  fly.toml  pyproject.toml  start.sh
alembic/: env.py
alembic/versions/: 037f54e0f222_initial_migration.py  dbf0b23e247a_add_notification_fields_to_task.py
docs/: api.md  database.md  privacy-policy.md  technology-selection.md  terms-of-service.md
docs/prd/: prd.md
docs/vibecoding-plan/: vibecoding-plan.md
src/discord_todo/: __main__.py  bot.py  config.py  main.py
src/discord_todo/api/: mail_callback.py
src/discord_todo/bot/: __init__.py  bot.py
src/discord_todo/bot/cogs/: mail.py  mail_scheduler.py  task.py
src/discord_todo/commands/: task.py
src/discord_todo/db/: session.py
src/discord_todo/models/: __init__.py  base.py  mail.py  task.py
src/discord_todo/tasks/: notification.py
src/discord_todo/utils/: date_parser.py  notification.py
